<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson3</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill:</string>
    <string name="bill_edit_text">0.0</string>
    
    <string name="tip_text_view">Tip:</string>
    <string name="tip_edit_text">.15</string>
    
    <string name="final_text_view">Final Bill:</string>
    <string name="final_bill_edit_text">.15</string>
    
    <string name="change_text_view">Change Tip:</string>
    
    <string name="intro_text_view">Introduction</string>
    
    <string name="intro_friendly_text_view">FriendLy</string>
    <string name="intro_specials_text_view">Specials</string>
    <string name="intro_opinion_text_view">Opinion</string>

    <string name="available_text_view">Availability</string>
    <string name="available_bad_radiobutton">Bad</string>
    <string name="available_ok_radiobutton">OK</string>
    <string name="available_good_radiobutton">Good</string>
    
    <string name="time_waiting_text_view">Time Waiting Service</string>
    <string name="start_chronometr_button">Start</string>
    <string name="pause_chronometr_button">Pause</string>
    <string name="reset_chronometr_button">Reset</string>
    
    <string-array name="problem_solving">
        <item>Problem solving</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Good</item>
    </string-array>
</resources>
