<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lesson3.Lesson" >

    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="19dp"
        android:text="@string/bill_text_view" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billTextView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/billTextView"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/bill_edit_text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/changeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billTextView"
        android:layout_alignTop="@+id/finalbillEditText"
        android:text="@string/change_text_view" />

    <EditText
        android:id="@+id/tipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billEditText"
        android:layout_alignBottom="@+id/billEditText"
        android:layout_toRightOf="@+id/finalTextView"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/tip_edit_text" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipEditText"
        android:layout_alignBottom="@+id/tipEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/tip_text_view" />

    <TextView
        android:id="@+id/finalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_below="@+id/tipEditText"
        android:layout_marginTop="25dp"
        android:text="@string/final_text_view" />

    <EditText
        android:id="@+id/finalbillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalTextView"
        android:layout_alignRight="@+id/tipEditText"
        android:layout_below="@+id/finalTextView"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_edit_text" />

    <SeekBar
        android:id="@+id/changeTipSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeTextView"
        android:layout_alignRight="@+id/billEditText"
        android:layout_below="@+id/changeTextView"
        android:progress="15" />

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeTipSeekBar"
        android:layout_below="@+id/changeTipSeekBar"
        android:layout_marginTop="26dp"
        android:text="@string/intro_text_view" />

    <CheckBox
        android:id="@+id/friendlyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/introTextView"
        android:layout_below="@+id/introTextView"
        android:layout_marginTop="13dp"
        android:text="@string/intro_friendly_text_view" />

    <Spinner
        android:id="@+id/promlemsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/availableRadioGroup"
        android:layout_below="@+id/availableRadioGroup"
        android:layout_marginTop="15dp"
        android:entries="@array/problem_solving" />

    <TextView
        android:id="@+id/timeWaitingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/promlemsSpinner"
        android:layout_below="@+id/promlemsSpinner"
        android:text="@string/time_waiting_text_view" />

    <Chronometer
        android:id="@+id/timeWaitingChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promlemsSpinner"
        android:layout_centerHorizontal="true"
        android:text="Chronometer" />

    <TextView
        android:id="@+id/availabilityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_centerVertical="true"
        android:text="@string/available_text_view" />

    <RadioGroup
        android:id="@+id/availableRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_below="@+id/availabilityTextView"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/badRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/available_bad_radiobutton" />

        <RadioButton
            android:id="@+id/goodRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_good_radiobutton" />

        <RadioButton
            android:id="@+id/okRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_ok_radiobutton" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/specialsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friendlyCheckBox"
        android:layout_alignBottom="@+id/friendlyCheckBox"
        android:layout_toRightOf="@+id/changeTipSeekBar"
        android:text="@string/intro_specials_text_view" />

    <CheckBox
        android:id="@+id/opinionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/specialsCheckBox"
        android:layout_alignBottom="@+id/specialsCheckBox"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/specialsCheckBox"
        android:text="@string/intro_opinion_text_view" />

    <Button
        android:id="@+id/startButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeWaitingTextView"
        android:layout_below="@+id/timeWaitingChronometer"
        android:layout_marginTop="19dp"
        android:text="@string/start_chronometr_button" />

    <Button
        android:id="@+id/pauseButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toRightOf="@+id/changeTextView"
        android:text="@string/pause_chronometr_button" />

    <Button
        android:id="@+id/resetButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_toLeftOf="@+id/opinionCheckBox"
        android:text="@string/reset_chronometr_button" />

</RelativeLayout>